--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install ansible 
         run: sudo apt install ansible
+      - name: Update hosts
+        run: sudo cp hosts /etc/ansible/
       - name: Run playbook
         uses: andreabiondo/action-ansible-playbook@v2
         with:
