--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install ansible 
-        run: sudo apt install ansible
+        run: sudo apt install -y ansible
       - name: Update hosts
         run: sudo cp hosts /etc/ansible/
       - name: Run playbook
