Fix inventory in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           playbook: ansible-master.yml
           key: ${{secrets.SSH_PRIVATE_KEY}}
           directory: ansible
-          inventory:
+          inventory: |
             [servers]
             node1 ansible_ssh_host=172.16.226.158
             node2 ansible_ssh_host=172.16.226.132
