--- a/ansible/ansible-master.yml
+++ b/ansible/ansible-master.yml
@@ -1,10 +1,10 @@
 ---
 - name: Install nginx
-  hosts: node1
+  hosts: servers
   become: yes
 
   tasks:
     - name: Install nginx
       apt:
-        name: nginx
+        name: yarn
         state: present
